---
source: compiler-core/src/erlang/tests/echo.rs
expression: "\npub fn main() {\n  echo {\n    Nil\n    1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  echo {
    Nil
    1
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    echo(begin
        nil,
        1
    end, nil, ~"project/test/my/mod.gleam", 3).

% ...omitted echo code...
